--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
 	},
 	"peerDependencies": {
 		"typescript": "^5"
+	},
+	"dependencies": {
+		"@types/node-notifier": "^8.0.5",
+		"node-notifier": "^10.0.1"
 	}
 }
